revamp layout, overflow improvements, correct heights

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,17 @@
     height: 600px;
   }
 
+  #__next,
+  body,
+  html {
+    /* overflow: hidden; */
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+
   body {
     overflow: hidden;
   }
